Updated with login and customer

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,7 @@
 
 DATABASE_URI=mongodb+srv://farooq123:farooq123@cluster0.ijdh8yd.mongodb.net/fyp-project?retryWrites=true&w=majority&appName=Cluster0
 PORT=3001
+
+SAMPLE_USER="hibynomoto@mailinator.com"
+
+JWT_SECRET="uasb4MJDS8zK5el98qY7gQNO8NZOAI3aUneNKTuY9bs="
