--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "@types/figlet": "^1.7.0",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/multer": "^1.4.12",
+    "bcryptjs": "^3.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
