--- a/server/package.json
+++ b/server/package.json
@@ -23,8 +23,10 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "figlet": "^1.8.0",
+    "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
+    "mongoose-slug-generator": "^1.0.4",
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
