--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
-    "build": "tsc",
+    "build": "tsup && ts-node postbuild.js",
     "start": "node dist/server.js",
     "lint": "eslint 'src/**/*.{js,ts}' --fix",
     "test": "jest"
@@ -23,11 +23,13 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "figlet": "^1.8.0",
+    "fs-extra": "^11.3.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
     "mongoose-slug-generator": "^1.0.4",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "tsup": "^8.3.6"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
