--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,12 +1,20 @@
 {
     "compilerOptions": {
-      "target": "ES6",
-      "module": "CommonJS",
-      "outDir": "./dist",
-      "rootDir": "./src",
+      "target": "ESNext",
+      "module": "NodeNext",
+      "moduleResolution": "NodeNext",
+      "lib": ["ESNext"],
+      "outDir": "dist",
+      "rootDir": "src",
       "strict": true,
       "esModuleInterop": true,
-      "resolveJsonModule": true
-    }
+      "skipLibCheck": true,
+      "forceConsistentCasingInFileNames": true,
+      "resolveJsonModule": true,
+      "declaration": true,
+      "sourceMap": true
+    },
+    "include": ["src"],
+    "exclude": ["node_modules", "dist"]
   }
   
