--- a/server/package.json
+++ b/server/package.json
@@ -14,14 +14,18 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/connect-mongo": "^3.1.6",
     "@types/cors": "^2.8.17",
+    "@types/express-session": "^1.18.1",
     "@types/figlet": "^1.7.0",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/multer": "^1.4.12",
     "bcryptjs": "^3.0.0",
+    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "figlet": "^1.8.0",
     "fs-extra": "^11.3.0",
     "http-status-codes": "^2.3.0",
