--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,6 @@ PORT=3001
 SAMPLE_USER="hibynomoto@mailinator.com"
 
 JWT_SECRET="uasb4MJDS8zK5el98qY7gQNO8NZOAI3aUneNKTuY9bs="
+
+
+NODE_ENV="development"
