--- a/client/package.json
+++ b/client/package.json
@@ -20,12 +20,17 @@
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@reduxjs/toolkit": "^2.5.1",
+    "@tanstack/react-query": "^5.66.3",
+    "@tanstack/react-query-devtools": "^5.66.3",
+    "axios": "^1.7.9",
+    "axios-logger": "^2.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "next-auth": "^4.24.11",
+    "nookies": "^2.5.2",
     "react": "^19.0.0",
     "react-data-table-component": "^7.6.2",
     "react-day-picker": "^8.10.1",
