--- a/server/package.json
+++ b/server/package.json
@@ -24,21 +24,26 @@
     "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "figlet": "^1.8.0",
     "fs-extra": "^11.3.0",
     "http-status-codes": "^2.3.0",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
     "mongoose-slug-generator": "^1.0.4",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.10.0",
     "tsup": "^8.3.6"
   },
   "devDependencies": {
+    "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.4",
+    "@types/nodemailer": "^6.4.17",
     "eslint": "^9.20.1",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
