--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "@types/multer": "^1.4.12",
     "bcryptjs": "^3.0.0",
     "connect-mongo": "^5.1.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
