--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,9 @@
     "@types/figlet": "^1.7.0",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/multer": "^1.4.12",
+    "arima": "^0.2.5",
     "bcryptjs": "^3.0.0",
+    "child_process": "^1.0.2",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -37,6 +39,7 @@
     "mongoose-slug-generator": "^1.0.4",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
+    "timeseries-analysis": "^1.0.12",
     "tsup": "^8.3.6"
   },
   "devDependencies": {
