Add service description to model, enhance invoice validation, and implement sales server script

--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
     "dev": "nodemon",
     "build": "tsup && ts-node postbuild.js",
     "start": "node dist/server.js",
+    "run-sale-server": "python ./src/scripts/forecast.py",
     "lint": "eslint 'src/**/*.{js,ts}' --fix",
     "test": "jest"
   },
